--- a/index.html
+++ b/index.html
@@ -234,14 +234,11 @@
     <div id="chat-shell" class="relative rounded-3xl shadow-2xl p-6 mt-2 sm:mt-3 flex flex-col justify-between border border-white/10 bg-[#0F1012]">
       <div id="chat-messages" class="chat-messages flex flex-col space-y-4 mb-4">
         <div class="flex justify-start">
-          <div class="p-3 rounded-2xl max-w-[80%] shadow-lg bg-[#151618] text-neutral-300 rounded-bl-none">
-            Welcome! What kind of CoWorker would you like to create?
-          </div>
         </div>
       </div>
 
       <form id="chat-form" class="relative">
-        <textarea id="chat-input" rows="2" placeholder="Ask Engini to create a CoWorker that..."
+        <textarea id="chat-input" rows="2" placeholder="Ask Engini to create a Worker that..."
           class="w-full p-4 pr-12 rounded-2xl bg-[#1B1D22] text-neutral-100 placeholder-neutral-500
                  focus:outline-none focus:ring-2 focus:ring-[#8E7AEF] transition resize-none"></textarea>
         <button type="submit" id="send-button"
@@ -266,7 +263,7 @@
         <h2 class="text-3xl sm:text-4xl font-poppins font-semibold text-white">Workspace</h2>
         <div class="relative">
           <input id="search-input" class="w-72 max-w-[76vw] p-3 pl-10 rounded-2xl bg-[#151618] border border-white/10 text-neutral-200 placeholder-white/40"
-                 placeholder="Search CoWorkers...">
+                 placeholder="Search Workers...">
           <svg class="absolute left-3 top-1/2 -translate-y-1/2 text-white/40 h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <circle cx="11" cy="11" r="8"/><line x1="21" y1="21" x2="16.65" y2="16.65"/>
           </svg>
