--- a/my-workers.html
+++ b/my-workers.html
@@ -82,17 +82,17 @@
                 </ul>
               </div>
               <!-- By Use Case -->
-              <div>
-                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Use Case</p>
-                <ul class="space-y-2">
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Order-to-cash</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Employee onboarding</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Enterprise iPaaS</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Product-led sales</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Embedded Integrations</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
-                </ul>
-              </div>
+ <div>
+                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Use Case</p>
+                  <ul class="space-y-2">
+                    <li><a href="use Cases.html#order-to-cash" class="hover:underline">Order-to-cash</a></li>
+                    <li><a href="use Cases.html#employee-onboarding" class="hover:underline">Employee onboarding</a></li>
+                    <li><a href="use Cases.html#enterprise-ipaas" class="hover:underline">Enterprise iPaaS</a></li>
+                    <li><a href="use Cases.html#product-led-sales" class="hover:underline">Product-led sales</a></li>
+                    <li><a href="use Cases.html#embedded-integrations" class="hover:underline">Embedded Integrations</a></li>
+                    <li><a href="use Cases.html#all" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
+                  </ul>
+                </div>
               <!-- By Industry -->
           <div>
                   <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
