--- a/Industries.html
+++ b/Industries.html
@@ -68,15 +68,15 @@
                   </ul>
                 </div>
                 <!-- By Use Case -->
-                <div>
+ <div>
                   <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Use Case</p>
                   <ul class="space-y-2">
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Order-to-cash</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Employee onboarding</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Enterprise iPaaS</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Product-led sales</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Embedded Integrations</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
+                    <li><a href="use Cases.html#order-to-cash" class="hover:underline">Order-to-cash</a></li>
+                    <li><a href="use Cases.html#employee-onboarding" class="hover:underline">Employee onboarding</a></li>
+                    <li><a href="use Cases.html#enterprise-ipaas" class="hover:underline">Enterprise iPaaS</a></li>
+                    <li><a href="use Cases.html#product-led-sales" class="hover:underline">Product-led sales</a></li>
+                    <li><a href="use Cases.html#embedded-integrations" class="hover:underline">Embedded Integrations</a></li>
+                    <li><a href="use Cases.html#all" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
                   </ul>
                 </div>
                 <!-- By Industry (current page) -->
@@ -142,14 +142,6 @@
       </div>
     </nav>
   </header>
-
-  <!-- Hero -->
-  <section class="text-center py-20 px-6 bg-gradient-to-b from-[#0B0C0E] via-[#0F1012] to-[#151618]">
-    <h1 class="text-4xl md:text-5xl font-bold font-poppins mb-4">Industries We Serve</h1>
-    <p class="text-white/70 max-w-3xl mx-auto text-lg">
-      Tailored playbooks, compliant integrations, and agentic workflows that reflect your domain’s realities—whether you move goods, treat patients, or run global finance.
-    </p>
-  </section>
 
   <!-- Local TOC -->
   <nav class="sticky top-20 z-40 bg-[#0F1012]/70 backdrop-blur-md border-y border-white/10">
