--- a/platform.html
+++ b/platform.html
@@ -107,17 +107,17 @@
                   </ul>
                 </div>
                <!-- By Industry -->
-          <div>
+              <div>
                   <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
                   <ul class="space-y-2">
-                    <li><a href="industries.html#manufacturing" class="hover:underline">Manufacturing</a></li>
-                    <li><a href="industries.html#financial-services" class="hover:underline">Financial services</a></li>
-                    <li><a href="industries.html#retail" class="hover:underline">Retail</a></li>
-                    <li><a href="industries.html#logistics" class="hover:underline">Logistics</a></li>
-                    <li><a href="industries.html#healthcare" class="hover:underline">Healthcare</a></li>
-                    <li><a href="industries.html#media" class="hover:underline">Media</a></li>
-                    <li><a href="industries.html#bpo" class="hover:underline">BPO</a></li>
-                    <li><a href="industries.html#nonprofit" class="hover:underline">Non-profit</a></li>
+                    <li><a href="industries.html" class="hover:underline">Manufacturing</a></li>
+                    <li><a href="industries.html" class="hover:underline">Financial services</a></li>
+                    <li><a href="industries.html" class="hover:underline">Retail</a></li>
+                    <li><a href="industries.html" class="hover:underline">Logistics</a></li>
+                    <li><a href="industries.html" class="hover:underline">Healthcare</a></li>
+                    <li><a href="industries.html" class="hover:underline">Media</a></li>
+                    <li><a href="industries.html" class="hover:underline">BPO</a></li>
+                    <li><a href="industries.html" class="hover:underline">Non-profit</a></li>
                   </ul>
                 </div>
               </div>
