--- a/index.html
+++ b/index.html
@@ -194,9 +194,12 @@
 <section class="relative flex flex-col items-center justify-start pt-12 sm:pt-20 pb-4 sm:pb-6 bg-gradient-to-b from-[#0B0C0E] via-[#0F1012] to-[#151618]">
   <div class="text-center max-w-3xl mx-auto px-4 mb-6">
  <h1 class="text-3xl sm:text-4xl lg:text-5xl font-poppins font-semibold text-white leading-tight max-w-5xl mx-auto text-center">
-  AI Agent Orchestration. Agentic Workforce Ready.
+  AI Agent Orchestration.
+</h1><br>
+ <h1 class="text-3xl sm:text-4xl lg:text-5xl font-poppins font-semibold text-white leading-tight max-w-5xl mx-auto text-center">
+  Agentic Workforce Ready.
 </h1>
-
+<br>
     <p class="text-base sm:text-lg text-neutral-300">
     Integrate AI Agents Seamlessly Across Legacy, Cloud, and SaaS Systems.
     </p>
@@ -207,8 +210,22 @@
 <!-- Big Buttons Row -->
 <div class="flex flex-wrap gap-12 justify-center items-center my-16 px-4 relative">
   <!-- AI Agents Orchestration Button -->
-  <a href="#ipass-evolution" class="w-64 h-56 bg-gradient-to-br from-[#2A2D34] to-[#1B1D22] text-white rounded-3xl shadow-[0_16px_40px_rgba(0,0,0,0.6)] border border-white/10 hover:border-white/20 text-2xl font-semibold transform hover:-translate-y-2 hover:scale-[1.05] hover:shadow-[0_20px_50px_rgba(0,0,0,0.8)] transition-all duration-300 ease-in-out flex items-center justify-center relative overflow-hidden text-center group"> 
-    <div class="absolute inset-0 bg-white/5 rounded-3xl opacity-0 group-hover:opacity-10 transition-opacity duration-300"></div>
+  <a href="#ipass-evolution" 
+     class="w-72 h-64 bg-gradient-to-br from-[#1A1C20] via-[#23252A] to-[#101113] 
+            text-white rounded-3xl 
+            shadow-[0_10px_20px_rgba(0,0,0,0.8),inset_0_2px_4px_rgba(255,255,255,0.05)] 
+            border border-white/10 
+            hover:border-white/30 
+            text-2xl font-semibold 
+            transform hover:-translate-y-3 hover:scale-[1.07] 
+            hover:shadow-[0_25px_60px_rgba(0,0,0,0.95),0_0_20px_rgba(142,122,239,0.35)] 
+            transition-all duration-300 ease-in-out 
+            flex items-center justify-center relative overflow-hidden text-center group"> 
+    <!-- Inner glow overlay -->
+    <div class="absolute inset-0 bg-gradient-to-t from-white/5 to-transparent rounded-3xl opacity-40 group-hover:opacity-70 transition-all duration-300"></div>
+    <!-- Shine streak -->
+    <div class="absolute -top-1/2 left-0 w-full h-full bg-gradient-to-r from-transparent via-white/10 to-transparent transform -skew-y-12 opacity-0 group-hover:opacity-40 group-hover:translate-x-16 transition-all duration-500"></div>
+    <!-- Text -->
     <div class="flex flex-col items-center justify-center h-full z-10 relative">
       AI Agents
       <span class="text-lg font-medium opacity-70">Orchestration</span>
@@ -216,17 +233,32 @@
   </a>
 
   <!-- Vertical Divider with subtle glow -->
-  <div class="hidden md:block w-0.5 h-60 bg-gradient-to-b from-transparent via-white/20 to-transparent rounded"></div>
+  <div class="hidden md:block w-0.5 h-60 bg-gradient-to-b from-transparent via-white/30 to-transparent rounded"></div>
 
   <!-- Enterprise Workers Button -->
-  <a href="#workspace-section" class="w-64 h-56 bg-gradient-to-br from-[#2A2D34] to-[#1B1D22] text-white rounded-3xl shadow-[0_16px_40px_rgba(0,0,0,0.6)] border border-white/10 hover:border-white/20 text-2xl font-semibold transform hover:-translate-y-2 hover:scale-[1.05] hover:shadow-[0_20px_50px_rgba(0,0,0,0.8)] transition-all duration-300 ease-in-out flex items-center justify-center relative overflow-hidden text-center group">
-    <div class="absolute inset-0 bg-white/5 rounded-3xl opacity-0 group-hover:opacity-10 transition-opacity duration-300"></div>
-    <div class="z-10">
+  <a href="#workspace-section" 
+     class="w-72 h-64 bg-gradient-to-br from-[#1A1C20] via-[#23252A] to-[#101113] 
+            text-white rounded-3xl 
+            shadow-[0_10px_20px_rgba(0,0,0,0.8),inset_0_2px_4px_rgba(255,255,255,0.05)] 
+            border border-white/10 
+            hover:border-white/30 
+            text-2xl font-semibold 
+            transform hover:-translate-y-3 hover:scale-[1.07] 
+            hover:shadow-[0_25px_60px_rgba(0,0,0,0.95),0_0_20px_rgba(142,122,239,0.35)] 
+            transition-all duration-300 ease-in-out 
+            flex items-center justify-center relative overflow-hidden text-center group">
+    <!-- Inner glow overlay -->
+    <div class="absolute inset-0 bg-gradient-to-t from-white/5 to-transparent rounded-3xl opacity-40 group-hover:opacity-70 transition-all duration-300"></div>
+    <!-- Shine streak -->
+    <div class="absolute -top-1/2 left-0 w-full h-full bg-gradient-to-r from-transparent via-white/10 to-transparent transform -skew-y-12 opacity-0 group-hover:opacity-40 group-hover:translate-x-16 transition-all duration-500"></div>
+    <!-- Text -->
+    <div class="z-10 text-center">
       Enterprise <br />
       <span class="text-lg font-medium opacity-70">Agentic Workers</span>
     </div>
   </a>
 </div>
+
 
 
 
