--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
               <div>
                 <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">App Integrations</p>
                 <ul class="space-y-3">
-                  <li class="flex items-center gap-2"><img src="icons/salesforce.png" class="w-6 h-5" /><a href="https://engini.io/engini-connectors/">Salesforce</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/slack.png" class="w-6 h-6" /><a href="https://engini.io/engini-connectors/">Slack</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/marketo.png" class="w-6 h-6" /><a href="https://engini.io/engini-connectors/">Marketo</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/netsuite.png" class="w-6 h-6" /><a href="https://engini.io/engini-connectors/">NetSuite</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/servicenow.png" class="w-6 h-6" /><a href="https://engini.io/engini-connectors/">ServiceNow</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/workday.png" class="w- h-6" /><a href="https://engini.io/engini-connectors/">Workday</a></li>
-                  <li><a href="https://engini.io/engini-connectors/" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
+                  <li class="flex items-center gap-2"><img src="icons/salesforce.png" class="w-6 h-5" /><a href="app.html">Salesforce</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/slack.png" class="w-6 h-6" /><a href="app.html">Slack</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/marketo.png" class="w-6 h-6" /><a href="app.html">Marketo</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/netsuite.png" class="w-6 h-6" /><a href="app.html">NetSuite</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/servicenow.png" class="w-6 h-6" /><a href="app.html">ServiceNow</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/workday.png" class="w- h-6" /><a href="app.html">Workday</a></li>
+                  <li><a href="app.html" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
                 </ul>
               </div>
               <!-- By Function -->
