--- a/my-workers.html
+++ b/my-workers.html
@@ -39,7 +39,6 @@
  
 <header class="sticky top-0 z-50 bg-transparent">
   <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between bg-white/10 backdrop-blur-md border border-white/10 rounded-2xl mt-3 shadow-md">
-
     <!-- Logo -->
     <a href="index.html" class="flex items-center space-x-2">
       <img src="image.png" alt="Engini-logo" class="w-24 sm:w-28 h-auto" />
@@ -48,7 +47,6 @@
     <!-- Nav Center -->
     <div class="flex-grow flex justify-center">
       <div class="flex items-center space-x-6 text-sm font-medium text-neutral-300">
-
         <!-- Solutions -->
         <div class="relative group">
           <button class="hover:text-white transition-colors peer px-4 py-3">Solutions</button>
@@ -58,13 +56,13 @@
               <div>
                 <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">App Integrations</p>
                 <ul class="space-y-3">
-                  <li class="flex items-center gap-2"><img src="icons/salesforce.png" class="w-8 h-8" /><a href="https://engini.io/engini-connectors/">Salesforce</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/slack.png" class="w-8 h-8" /><a href="https://engini.io/engini-connectors/">Slack</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/marketo.png" class="w-8 h-8" /><a href="https://engini.io/engini-connectors/">Marketo</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/netsuite.png" class="w-8 h-8" /><a href="https://engini.io/engini-connectors/">NetSuite</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/servicenow.png" class="w-8 h-8" /><a href="https://engini.io/engini-connectors/">ServiceNow</a></li>
-                  <li class="flex items-center gap-2"><img src="icons/workday.png" class="w-8 h-8" /><a href="https://engini.io/engini-connectors/">Workday</a></li>
-                  <li><a href="https://engini.io/engini-connectors/" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
+                  <li class="flex items-center gap-2"><img src="icons/salesforce.png" class="w-6 h-5" /><a href="app.html">Salesforce</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/slack.png" class="w-6 h-6" /><a href="app.html">Slack</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/marketo.png" class="w-6 h-6" /><a href="app.html">Marketo</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/netsuite.png" class="w-6 h-6" /><a href="app.html">NetSuite</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/servicenow.png" class="w-6 h-6" /><a href="app.html">ServiceNow</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/workday.png" class="w- h-6" /><a href="app.html">Workday</a></li>
+                  <li><a href="app.html" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
                 </ul>
               </div>
               <!-- By Function -->
@@ -82,34 +80,34 @@
                 </ul>
               </div>
               <!-- By Use Case -->
- <div>
-                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Use Case</p>
-                  <ul class="space-y-2">
-                    <li><a href="use Cases.html#order-to-cash" class="hover:underline">Order-to-cash</a></li>
-                    <li><a href="use Cases.html#employee-onboarding" class="hover:underline">Employee onboarding</a></li>
-                    <li><a href="use Cases.html#enterprise-ipaas" class="hover:underline">Enterprise iPaaS</a></li>
-                    <li><a href="use Cases.html#product-led-sales" class="hover:underline">Product-led sales</a></li>
-                    <li><a href="use Cases.html#embedded-integrations" class="hover:underline">Embedded Integrations</a></li>
-                    <li><a href="use Cases.html#all" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
-                  </ul>
-                </div>
+              <div>
+                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Use Case</p>
+                <ul class="space-y-2">
+                  <li><a href="use Cases.html#order-to-cash" class="hover:underline">Order-to-cash</a></li>
+                  <li><a href="use Cases.html#employee-onboarding" class="hover:underline">Employee onboarding</a></li>
+                  <li><a href="use Cases.html#enterprise-ipaas" class="hover:underline">Enterprise iPaaS</a></li>
+                  <li><a href="use Cases.html#product-led-sales" class="hover:underline">Product-led sales</a></li>
+                  <li><a href="use Cases.html#embedded-integrations" class="hover:underline">Embedded Integrations</a></li>
+                  <li><a href="use Cases.html#all" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
+                </ul>
+              </div>
               <!-- By Industry -->
               <div>
-                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
-                  <ul class="space-y-2">
-                    <li><a href="industries.html" class="hover:underline">Manufacturing</a></li>
-                    <li><a href="industries.html" class="hover:underline">Financial services</a></li>
-                    <li><a href="industries.html" class="hover:underline">Retail</a></li>
-                    <li><a href="industries.html" class="hover:underline">Logistics</a></li>
-                    <li><a href="industries.html" class="hover:underline">Healthcare</a></li>
-                    <li><a href="industries.html" class="hover:underline">Media</a></li>
-                    <li><a href="industries.html" class="hover:underline">BPO</a></li>
-                    <li><a href="industries.html" class="hover:underline">Non-profit</a></li>
-                  </ul>
-                </div>
+                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
+                <ul class="space-y-2">
+                  <li><a href="industries.html" class="hover:underline">Manufacturing</a></li>
+                  <li><a href="industries.html" class="hover:underline">Financial services</a></li>
+                  <li><a href="industries.html" class="hover:underline">Retail</a></li>
+                  <li><a href="industries.html" class="hover:underline">Logistics</a></li>
+                  <li><a href="industries.html" class="hover:underline">Healthcare</a></li>
+                  <li><a href="industries.html" class="hover:underline">Media</a></li>
+                  <li><a href="industries.html" class="hover:underline">BPO</a></li>
+                  <li><a href="industries.html" class="hover:underline">Non-profit</a></li>
+                </ul>
               </div>
             </div>
           </div>
+        </div>
 
         <!-- Platform -->
         <div class="relative group">
@@ -150,7 +148,7 @@
         </div>
 
         <!-- Static Links -->
-        <a href="index.html#workspace-section" class="hover:text-white transition-colors px-3 py-3">Workspace</a>
+        <a href="#workspace-section" class="hover:text-white transition-colors px-3 py-3">Workspace</a>
         <a href="my-workers.html" class="hover:text-white transition-colors px-3 py-3">My Workers</a>
       </div>
     </div>
