--- a/industries.html
+++ b/industries.html
@@ -24,124 +24,123 @@
 <body class="min-h-screen flex flex-col bg-[#0B0C0E] text-neutral-200">
 
   <!-- Header -->
-  <header class="sticky top-0 z-50 bg-transparent">
-    <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between bg-white/10 backdrop-blur-md border border-white/10 rounded-2xl mt-3 shadow-md">
-      <!-- Logo -->
-      <a href="index.html" class="flex items-center space-x-2">
-        <img src="image.png" alt="Engini-logo" class="w-24 sm:w-28 h-auto" />
-      </a>
+<header class="sticky top-0 z-50 bg-transparent">
+  <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between bg-white/10 backdrop-blur-md border border-white/10 rounded-2xl mt-3 shadow-md">
+    <!-- Logo -->
+    <a href="index.html" class="flex items-center space-x-2">
+      <img src="image.png" alt="Engini-logo" class="w-24 sm:w-28 h-auto" />
+    </a>
 
-      <!-- Center nav -->
-      <div class="flex-grow flex justify-center">
-        <div class="flex items-center space-x-6 text-sm font-medium text-neutral-300">
-
-          <!-- Solutions -->
-          <div class="relative group">
-            <button class="hover:text-white transition-colors peer px-4 py-3">Solutions</button>
-            <div class="absolute left-1/2 -translate-x-1/3 top-full mt-0 pt-2 w-[1000px] p-6 rounded-xl bg-[#1B1D22] border border-white/10 shadow-xl z-50 opacity-0 pointer-events-none transition duration-200 group-hover:opacity-100 group-hover:pointer-events-auto hover:opacity-100 hover:pointer-events-auto">
-              <div class="grid grid-cols-4 gap-8 text-white text-sm">
-                <!-- App Integrations -->
-                <div>
-                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">App Integrations</p>
-                  <ul class="space-y-3">
-                    <li class="flex items-center gap-2"><img src="icons/salesforce.png" class="w-8 h-8 object-contain" alt="Salesforce" /><a href="https://engini.io/engini-connectors/">Salesforce</a></li>
-                    <li class="flex items-center gap-2"><img src="icons/slack.png" class="w-8 h-8 object-contain" alt="Slack" /><a href="https://engini.io/engini-connectors/">Slack</a></li>
-                    <li class="flex items-center gap-2"><img src="icons/marketo.png" class="w-8 h-8 object-contain" alt="Marketo" /><a href="https://engini.io/engini-connectors/">Marketo</a></li>
-                    <li class="flex items-center gap-2"><img src="icons/netsuite.png" class="w-8 h-8 object-contain" alt="NetSuite" /><a href="https://engini.io/engini-connectors/">NetSuite</a></li>
-                    <li class="flex items-center gap-2"><img src="icons/servicenow.png" class="w-8 h-8 object-contain" alt="ServiceNow" /><a href="https://engini.io/engini-connectors/">ServiceNow</a></li>
-                    <li class="flex items-center gap-2"><img src="icons/workday.png" class="w-8 h-8 object-contain" alt="Workday" /><a href="https://engini.io/engini-connectors/">Workday</a></li>
-                    <li><a href="https://engini.io/engini-connectors/" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
-                  </ul>
-                </div>
-                <!-- By Function -->
-                <div>
-                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Function</p>
-                  <ul class="space-y-2">
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">IT</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Finance</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Support</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">HR</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Marketing</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Sales</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Revenue Operations</a></li>
-                    <li><a href="https://engini.io/engini-agents/" class="hover:underline">Product (Embed)</a></li>
-                  </ul>
-                </div>
-                <!-- By Use Case -->
- <div>
-                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Use Case</p>
-                  <ul class="space-y-2">
-                    <li><a href="use Cases.html#order-to-cash" class="hover:underline">Order-to-cash</a></li>
-                    <li><a href="use Cases.html#employee-onboarding" class="hover:underline">Employee onboarding</a></li>
-                    <li><a href="use Cases.html#enterprise-ipaas" class="hover:underline">Enterprise iPaaS</a></li>
-                    <li><a href="use Cases.html#product-led-sales" class="hover:underline">Product-led sales</a></li>
-                    <li><a href="use Cases.html#embedded-integrations" class="hover:underline">Embedded Integrations</a></li>
-                    <li><a href="use Cases.html#all" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
-                  </ul>
-                </div>
-                <!-- By Industry (current page) -->
-                <div>
-                  <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
-                  <ul class="space-y-2">
-                    <li><a href="industries.html#manufacturing" class="hover:underline">Manufacturing</a></li>
-                    <li><a href="industries.html#financial-services" class="hover:underline">Financial services</a></li>
-                    <li><a href="industries.html#retail" class="hover:underline">Retail</a></li>
-                    <li><a href="industries.html#logistics" class="hover:underline">Logistics</a></li>
-                    <li><a href="industries.html#healthcare" class="hover:underline">Healthcare</a></li>
-                    <li><a href="industries.html#media" class="hover:underline">Media</a></li>
-                    <li><a href="industries.html#bpo" class="hover:underline">BPO</a></li>
-                    <li><a href="industries.html#nonprofit" class="hover:underline">Non-profit</a></li>
-                  </ul>
-                </div>
+    <!-- Nav Center -->
+    <div class="flex-grow flex justify-center">
+      <div class="flex items-center space-x-6 text-sm font-medium text-neutral-300">
+        <!-- Solutions -->
+        <div class="relative group">
+          <button class="hover:text-white transition-colors peer px-4 py-3">Solutions</button>
+          <div class="absolute left-1/2 -translate-x-1/3 top-full mt-0 pt-2 w-[1000px] p-6 rounded-xl bg-[#1B1D22] border border-white/10 shadow-xl z-50 opacity-0 pointer-events-none transition duration-200 group-hover:opacity-100 group-hover:pointer-events-auto hover:opacity-100 hover:pointer-events-auto">
+            <div class="grid grid-cols-4 gap-8 text-white text-sm">
+              <!-- App Integrations -->
+              <div>
+                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">App Integrations</p>
+                <ul class="space-y-3">
+                  <li class="flex items-center gap-2"><img src="icons/salesforce.png" class="w-6 h-5" /><a href="app.html">Salesforce</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/slack.png" class="w-6 h-6" /><a href="app.html">Slack</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/marketo.png" class="w-6 h-6" /><a href="app.html">Marketo</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/netsuite.png" class="w-6 h-6" /><a href="app.html">NetSuite</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/servicenow.png" class="w-6 h-6" /><a href="app.html">ServiceNow</a></li>
+                  <li class="flex items-center gap-2"><img src="icons/workday.png" class="w- h-6" /><a href="app.html">Workday</a></li>
+                  <li><a href="app.html" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
+                </ul>
+              </div>
+              <!-- By Function -->
+              <div>
+                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Function</p>
+                <ul class="space-y-2">
+                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">IT</a></li>
+                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Finance</a></li>
+                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Support</a></li>
+                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">HR</a></li>
+                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Marketing</a></li>
+                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Sales</a></li>
+                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Revenue Operations</a></li>
+                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Product (Embed)</a></li>
+                </ul>
+              </div>
+              <!-- By Use Case -->
+              <div>
+                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Use Case</p>
+                <ul class="space-y-2">
+                  <li><a href="use Cases.html#order-to-cash" class="hover:underline">Order-to-cash</a></li>
+                  <li><a href="use Cases.html#employee-onboarding" class="hover:underline">Employee onboarding</a></li>
+                  <li><a href="use Cases.html#enterprise-ipaas" class="hover:underline">Enterprise iPaaS</a></li>
+                  <li><a href="use Cases.html#product-led-sales" class="hover:underline">Product-led sales</a></li>
+                  <li><a href="use Cases.html#embedded-integrations" class="hover:underline">Embedded Integrations</a></li>
+                  <li><a href="use Cases.html#all" class="text-white underline hover:no-underline font-medium flex items-center gap-1">View all <span>↗</span></a></li>
+                </ul>
+              </div>
+              <!-- By Industry -->
+              <div>
+                <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Industry</p>
+                <ul class="space-y-2">
+                  <li><a href="industries.html" class="hover:underline">Manufacturing</a></li>
+                  <li><a href="industries.html" class="hover:underline">Financial services</a></li>
+                  <li><a href="industries.html" class="hover:underline">Retail</a></li>
+                  <li><a href="industries.html" class="hover:underline">Logistics</a></li>
+                  <li><a href="industries.html" class="hover:underline">Healthcare</a></li>
+                  <li><a href="industries.html" class="hover:underline">Media</a></li>
+                  <li><a href="industries.html" class="hover:underline">BPO</a></li>
+                  <li><a href="industries.html" class="hover:underline">Non-profit</a></li>
+                </ul>
               </div>
             </div>
           </div>
-
-          <!-- Platform -->
-          <div class="relative group">
-            <button class="hover:text-white transition-colors peer px-4 py-3">Platform</button>
-            <div class="absolute left-1/2 -translate-x-1/2 top-full mt-0 pt-2 w-72 p-4 rounded-xl bg-[#1B1D22] border border-white/10 shadow-xl z-50 opacity-0 pointer-events-none transition duration-200 group-hover:opacity-100 group-hover:pointer-events-auto hover:opacity-100 hover:pointer-events-auto">
-              <ul class="space-y-2 text-sm text-white">
-                <li><a href="platform.html#architecture" class="hover:underline">Architecture</a></li>
-                <li><a href="platform.html#agent-os" class="hover:underline">Agent Operating System</a></li>
-                <li><a href="platform.html#security" class="hover:underline">Security</a></li>
-                <li><a href="platform.html#connectors" class="hover:underline">Connectors</a></li>
-                <li><a href="platform.html#workflows" class="hover:underline">Workflow Builder</a></li>
-                <li><a href="platform.html#playbooks" class="hover:underline">AI Playbooks</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Resources -->
-          <div class="relative group">
-            <button class="hover:text-white transition-colors peer px-4 py-3">Resources</button>
-            <div class="absolute left-1/2 -translate-x-1/2 top-full mt-0 pt-2 w-72 p-4 rounded-xl bg-[#1B1D22] border border-white/10 shadow-xl z-50 opacity-0 pointer-events-none transition duration-200 group-hover:opacity-100 group-hover:pointer-events-auto hover:opacity-100 hover:pointer-events-auto">
-              <ul class="space-y-2 text-sm text-white">
-                <li><a href="https://engini.io/help/" class="hover:underline">Documentation</a></li>
-                <li><a href="https://engini.io/blog/" class="hover:underline">Blog</a></li>
-                <li><a href="https://www.youtube.com/watch?v=EWs_WZCnUT8&list=PL7Z1lkK9TitWIeOkB6GN8f1h7cfsb1CVz" class="hover:underline">Webinars</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Partners -->
-          <div class="relative group">
-            <button class="hover:text-white transition-colors peer px-4 py-3">Partners</button>
-            <div class="absolute left-1/2 -translate-x-1/2 top-full mt-0 pt-2 w-72 p-4 rounded-xl bg-[#1B1D22] border border-white/10 shadow-xl z-50 opacity-0 pointer-events-none transition duration-200 group-hover:opacity-100 group-hover:pointer-events-auto hover:opacity-100 hover:pointer-events-auto">
-              <ul class="space-y-2 text-sm text-white">
-                <li><a href="https://engini.io/become-a-partner/" class="hover:underline">Become a Partner</a></li>
-                <li><a href="https://engini.io/become-a-partner/" class="hover:underline">Technology Partners</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Static Links -->
-          <a href="index.html#workspace-section" class="hover:text-white transition-colors px-3 py-3">Workspace</a>
-          <a href="my-workers.html" class="hover:text-white transition-colors px-3 py-3">My Workers</a>
         </div>
+
+        <!-- Platform -->
+        <div class="relative group">
+          <button class="hover:text-white transition-colors peer px-4 py-3">Platform</button>
+          <div class="absolute left-1/2 -translate-x-1/2 top-full mt-0 pt-2 w-72 p-4 rounded-xl bg-[#1B1D22] border border-white/10 shadow-xl z-50 opacity-0 pointer-events-none transition duration-200 group-hover:opacity-100 group-hover:pointer-events-auto hover:opacity-100 hover:pointer-events-auto">
+            <ul class="space-y-2 text-sm text-white">
+              <li><a href="platform.html" class="hover:underline">Architecture</a></li>
+              <li><a href="platform.html" class="hover:underline">Agent Operating System</a></li>
+              <li><a href="platform.html" class="hover:underline">Security</a></li>
+              <li><a href="platform.html" class="hover:underline">Connectors</a></li>
+              <li><a href="platform.html" class="hover:underline">Workflow Builder</a></li>
+              <li><a href="platform.html" class="hover:underline">AI Playbooks</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Resources -->
+        <div class="relative group">
+          <button class="hover:text-white transition-colors peer px-4 py-3">Resources</button>
+          <div class="absolute left-1/2 -translate-x-1/2 top-full mt-0 pt-2 w-72 p-4 rounded-xl bg-[#1B1D22] border border-white/10 shadow-xl z-50 opacity-0 pointer-events-none transition duration-200 group-hover:opacity-100 group-hover:pointer-events-auto hover:opacity-100 hover:pointer-events-auto">
+            <ul class="space-y-2 text-sm text-white">
+              <li><a href="https://engini.io/help/" class="hover:underline">Documentation</a></li>
+              <li><a href="https://engini.io/blog/" class="hover:underline">Blog</a></li>
+              <li><a href="https://www.youtube.com/watch?v=EWs_WZCnUT8&list=PL7Z1lkK9TitWIeOkB6GN8f1h7cfsb1CVz" class="hover:underline">Webinars</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Partners -->
+        <div class="relative group">
+          <button class="hover:text-white transition-colors peer px-4 py-3">Partners</button>
+          <div class="absolute left-1/2 -translate-x-1/2 top-full mt-0 pt-2 w-72 p-4 rounded-xl bg-[#1B1D22] border border-white/10 shadow-xl z-50 opacity-0 pointer-events-none transition duration-200 group-hover:opacity-100 group-hover:pointer-events-auto hover:opacity-100 hover:pointer-events-auto">
+            <ul class="space-y-2 text-sm text-white">
+              <li><a href="https://engini.io/become-a-partner/" class="hover:underline">Become a Partner</a></li>
+              <li><a href="https://engini.io/become-a-partner/" class="hover:underline">Technology Partners</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Static Links -->
+        <a href="#workspace-section" class="hover:text-white transition-colors px-3 py-3">Workspace</a>
+        <a href="my-workers.html" class="hover:text-white transition-colors px-3 py-3">My Workers</a>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
 
   <!-- Local TOC -->
   <nav class="sticky top-20 z-40 bg-[#0F1012]/70 backdrop-blur-md border-y border-white/10">
