--- a/platform.html
+++ b/platform.html
@@ -499,7 +499,7 @@
             <img src="icons/servicenow.png" alt="ServiceNow" class="h-10 w-10 object-contain mx-auto" loading="lazy" decoding="async">
             <img src="icons/workday.png" alt="Workday" class="h-10 w-10 object-contain mx-auto" loading="lazy" decoding="async">
           </div>
-          <a href="https://engini.io/engini-connectors/" class="inline-flex items-center gap-2 text-sm mt-6 underline hover:no-underline">Browse all connectors <span>↗</span></a>
+          <a href="https://enginiweb.github.io/Engini-CoWorker/app.html" class="inline-flex items-center gap-2 text-sm mt-6 underline hover:no-underline">Browse all connectors <span>↗</span></a>
         </div>
       </div>
     </section>
