--- a/use Cases.html
+++ b/use Cases.html
@@ -57,14 +57,14 @@
               <div>
                 <p class="uppercase text-xs font-semibold tracking-wide text-white/60 mb-4">By Function</p>
                 <ul class="space-y-2">
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">IT</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Finance</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Support</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">HR</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Marketing</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Sales</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Revenue Operations</a></li>
-                  <li><a href="https://engini.io/engini-agents/" class="hover:underline">Product (Embed)</a></li>
+                  <li><a href="functions.html#it" class="hover:underline">IT</a></li>
+                  <li><a href="functions.html#finance" class="hover:underline">Finance</a></li>
+                  <li><a href="functions.html#support" class="hover:underline">Support</a></li>
+                  <li><a href="functions.html#hr" class="hover:underline">HR</a></li>
+                  <li><a href="functions.html#marketing" class="hover:underline">Marketing</a></li>
+                  <li><a href="functions.html#sales" class="hover:underline">Sales</a></li>
+                  <li><a href="functions.html#revops" class="hover:underline">Revenue Operations</a></li>
+                  <li><a href="functions.html#product" class="hover:underline">Product (Embed)</a></li>
                 </ul>
               </div>
               <!-- By Use Case -->
