--- a/index.html
+++ b/index.html
@@ -63,6 +63,38 @@
     @keyframes dot{0%,80%,100%{transform:translateY(0)}40%{transform:translateY(-4px)}}
     .spin{width:18px;height:18px;border-radius:9999px;border:2px solid #0B0C0E;border-top-color:#fff;animation:spin 1s linear infinite}
     @keyframes spin{to{transform:rotate(360deg)}}
+
+
+    /* ===== Custom Scrollbar (modern browsers) ===== */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--bg-2, #0F1012);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #8E7AEF, #5CDEFF);
+  border-radius: 10px;
+  border: 2px solid var(--bg-2, #0F1012);
+  box-shadow: 0 0 6px rgba(142,122,239,0.4);
+  transition: background 0.3s ease, box-shadow 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #A99EFF, #7BE4FF);
+  box-shadow: 0 0 10px rgba(142,122,239,0.7), 0 0 4px rgba(92,221,255,0.6);
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #8E7AEF var(--bg-2, #0F1012);
+}
+
   </style>
 </head>
 <body class="min-h-screen flex flex-col bg-[#0B0C0E] text-neutral-200">
