--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     .wc-card[aria-expanded="true"] .wc-more{opacity:1}
 
     /* Spotlight */
-    .spline-loader{position:absolute;inset:0;display:grid;place-items:center;color:#A3A3A3;font-size:.9rem}
+       .spline-loader{position:absolute;inset:0;display:grid;place-items:center;color:#A3A3A3;font-size:.9rem}
 
     /* Evolution SVG helpers */
     .era svg{display:block}
@@ -726,7 +726,8 @@
   }
   splineWrap.addEventListener("pointerenter", loadSpline);
 
-
+  
 </script>
+<script src="script.js"></script>
 </body>
 </html>
