--- a/index.html
+++ b/index.html
@@ -726,7 +726,9 @@
   }
   splineWrap.addEventListener("pointerenter", loadSpline);
 
-  
+
 </script>
+<script src="script.js"></script>
+
 </body>
 </html>
